--- a/src/main/resources/templates/addMeal.html
+++ b/src/main/resources/templates/addMeal.html
@@ -9,17 +9,20 @@
         href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
         integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
         crossorigin="anonymous"/>
-
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
   <title>Calorie Counter</title>
-
 </head>
 <body>
-
 <h1>CalorieCounter</h1>
 
-<a class="btn btn-info" style="text-decoration: none" th:href="@{/addMeal}">Add or Edit meals</a>
+<form method="post" action="/addMeal">
+  <input th:type="text" name="addMeal"/>
+  <select name="mealtype">
+    <option  th:each="type : ${mealtype}" th:value="${type}" th:text="${type}"/>
+  </select>
+  <input class="btn btn-warning" th:type="submit" value="ENTER"/>
+</form>
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
