--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,7 +20,7 @@
 <h1>CalorieCounter</h1>
 
 
-<a class="btn btn-info" style="text-decoration: none" th:href="@{/addMeal}">Add or Edit meals</a>
+<a class="btn btn-info" style="text-decoration: none" th:href="@{/addMeal}">Add meals</a>
 
 <table class="table table-striped">
   <tr>
